Fix main title bug on mobile

--- a/styles/main_page_style.css
+++ b/styles/main_page_style.css
@@ -172,7 +172,7 @@ header {
                 width: 100%;
             }
 
-            #title {
+            #title > h1 {
                 font-size: 4rem;
             }
 
